62/10 - Refactored Game Engine
- Added latest build of the game in the assets.
- Added GLOBAL variables for public access to the dotnet reference.
- Updated VirtualSimulation.razor with initialize of the dotnet reference when it's loaded.

--- a/DanskAkvakulturSolutions/BlazorServer/BlazorServer.csproj
+++ b/DanskAkvakulturSolutions/BlazorServer/BlazorServer.csproj
@@ -15,4 +15,11 @@
     <Folder Include="wwwroot\libs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\assets\demo\Build\Unity.data" />
+    <None Include="wwwroot\assets\demo\Build\Unity.framework.js" />
+    <None Include="wwwroot\assets\demo\Build\Unity.loader.js" />
+    <None Include="wwwroot\assets\demo\Build\Unity.wasm" />
+  </ItemGroup>
+
 </Project>
