--- a/DanskAkvakulturSolutions/DataClassLibrary/DataClassLibrary.csproj
+++ b/DanskAkvakulturSolutions/DataClassLibrary/DataClassLibrary.csproj
@@ -10,4 +10,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.12" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
+	</ItemGroup>
+
 </Project>
