--- a/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/DanskAkvakultur.dk.Web.csproj
+++ b/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/DanskAkvakultur.dk.Web.csproj
@@ -8,10 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="wwwroot\libs\" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
