--- a/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/Properties/launchSettings.json
+++ b/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/Properties/launchSettings.json
@@ -19,10 +19,11 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
+        "ServerHost": "Test",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000"
     },
     "Docker": {
       "commandName": "Docker",
