Updated critical configs

--- a/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/appsettings.json
+++ b/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Simulation:RelativeUri": "/virtual-simulation-hub",
-  "Simulation:GameEnginePath": "./libs/engine/1.0.0/game-engine.js",
-  "DbConfig:ServerHost": "172.16.57.150,1433",
-  "DbConfig:Database": "FishFarmingDB"
+  "AllowedHosts": "*"
 }
